Resolved Issue of OTP Code Not Contrast in Dark Mode (Fixed #150)

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -75,7 +75,8 @@ body.dark .animation__underline:after {
     background: #FFFFFF;
 }
 body.dark .modal__container,
-body.dark .modal__closeBtn {
+body.dark .modal__closeBtn,
+body.dark .otp input {
     background-color: #333;
     color: #FFFFFF;
 }
@@ -84,6 +85,7 @@ body.dark .projects__viewMore,
 body.dark .link {
     color: #79c3ff !important;
 }
+body.dark .otp input { border-color: rgb(59, 57, 57); }
 body.dark .navbar { box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14),0 1px 10px 0 rgba(0,0,0,0.12),0 2px 4px -1px rgba(0,0,0,0.2); }
 body.dark .footer { background-color: #191919; }
 body.dark .contact__onFocus { background: #FFFFFF; }
@@ -862,7 +864,7 @@ blockquote em {font-style: italic;}
     text-align: center;
     border-radius: 5px;
     border-style: solid;
-    border-color: #f1f1f1 !important;
+    border-color: #f1f1f1;
 }
 .otp input:focus {
     color: #3F4254;
